[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedrep"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.1",
    "flwr-datasets[vision]>=0.4.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "isort==5.13.2",
    "black==24.2.0",
    "docformatter==1.7.5",
    "mypy==1.8.0",
    "pylint==3.2.6",
    "flake8==5.0.4",
    "pytest==6.2.4",
    "pytest-watch==4.2.0",
    "ruff==0.1.9",
    "types-requests==2.31.0.20240125",
]

[tool.isort]
profile = "black"
known_first_party = ["flwr"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "-qq"
testpaths = [
    "flwr_baselines",
]

[tool.mypy]
ignore_missing_imports = true
strict = false

[tool.pylint."MESSAGES CONTROL"]
disable = "duplicate-code,too-few-public-methods,useless-import-alias"
good-names = "i,j,k,_,x,y,X,Y,K,N"
max-args = 10
max-attributes = 15
max-locals = 36
max-branches = 20
max-statements = 55

[tool.pylint.typecheck]
generated-members = "numpy.*, torch.*, tensorflow.*"

[[tool.mypy.overrides]]
module = [
    "importlib.metadata.*",
    "importlib_metadata.*",
]
follow_imports = "skip"
follow_imports_for_stubs = true
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "torch.*"
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.docformatter]
wrap-summaries = 88
wrap-descriptions = 88

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["D", "E", "F", "W", "B", "ISC", "C4"]
fixable = ["D", "E", "F", "W", "B", "ISC", "C4"]
ignore = ["B024", "B027"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "proto",
]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "dimitris"

[tool.flwr.app.components]
serverapp = "fedrep.server_app:app"
clientapp = "fedrep.client_app:app"

[tool.flwr.app.config]
algorithm = "fedrep"

# dataset specs
dataset-name = "cifar10"
dataset-split = "sample"
dataset-split-num-classes = 2
dataset-split-seed = 42
dataset-split-fraction = 0.83

# model specs
model-name = "cnncifar10"
batch-size = 50
learning-rate = 0.01
momentum = 0.5
enable-finetune = false
num-finetune-epochs = 5
num-local-epochs = 5  # number of local epochs
num-rep-epochs = 1  # number of representation epochs (only for FedRep)

# server specs
num-server-rounds = 100
fraction-fit = 0.1
fraction-evaluate = 0.1
min-available-clients = 2
min-evaluate-clients = 2
min-fit-clients = 2

[tool.flwr.federations]
default = "local-sim-100"

[tool.flwr.federations.local-sim-100]
options.num-supernodes = 100
options.backend.client-resources.num-cpus = 2
options.backend.client-resources.num-gpus = 0.5  # GPU fraction allocated to each client
