[tool.poetry]
name = "fjord"
version = "0.1.0"
description = "FjORD implementation of Federated Ordered Dropout in Flower"
authors = ["Steve Laskaridis <stevelaskaridis@gmail.com>", "Samuel Horvath <samohorvath11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
coloredlogs = "15.0.1"
hydra-core = "1.3.2"
flwr = "1.5.0"
omegaconf = "2.3.0"
ray = "2.7.0"
torch = "2.0.1"
torchvision = "0.15.2"
tqdm = "4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
