[tool.poetry]
name = "fjord"
version = "0.1.0"
description = "FjORD implementation of Federated Ordered Dropout in Flower"
authors = ["Steve Laskaridis <stevelaskaridis@gmail.com>", "Samuel Horvath <samohorvath11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
[tool.poetry.dependencies]
python = ">=3.10.0, <3.11.0" 
flwr = { extras = ["simulation"], version = "1.5.0" }
hydra-core = "1.3.2"
matplotlib = "3.7.1"
coloredlogs = "15.0.1"
omegaconf = "2.3.0"
tqdm = "4.65.0"
torch = { url = "https://download.pytorch.org/whl/cu117/torch-2.0.1%2Bcu117-cp310-cp310-linux_x86_64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.2%2Bcu117-cp310-cp310-linux_x86_64.whl"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
