[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moon"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.10.0,<2.0",
    "flwr-datasets[vision]>=0.3.0,<1.0.0",
    "scikit-learn==1.3.0",
    "matplotlib==3.8.0",
    "torch@https://download.pytorch.org/whl/cu116/torch-1.12.0%2Bcu116-cp310-cp310-linux_x86_64.whl",
    "torchvision@https://download.pytorch.org/whl/cu116/torchvision-0.13.0%2Bcu116-cp310-cp310-linux_x86_64.whl",
]

[project.optional-dependencies]
dev = [
    "isort==5.13.2",
    "black==24.2.0",
    "docformatter==1.7.5",
    "mypy==1.4.1",
    "pylint==2.8.2",
    "flake8==3.9.2",
    "pytest==6.2.4",
    "pytest-watch==4.2.0",
    "ruff==0.0.272",
    "types-requests==2.27.7",
    "virtualenv==20.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = ["The Flower Authors <hello@flower.ai>", "Qinbin Li <liqinbin1998@gmail.com>"]

[tool.flwr.app.components]
serverapp = "moon.server_app:app"
clientapp = "moon.client_app:app"

[tool.flwr.app.config]
num-epochs = 10
fraction-fit = 1.0
batch-size = 64
learning-rate = 0.01
mu = 5
temperature = 0.5
alg = "moon"
seed = 0
server-device = "cpu"
num-server-rounds = 100

client-resources-num_cpus = 4
client-resources-num_gpus = 0.2

dataset-name = "uoft-cs/cifar10"
dirichlet-alpha = 0.5

model-name = "simple-cnn"
model-output-dim = 256
model-dir = "./client_states/moon/cifar10/"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10


# [tool.isort]
# line_length = 88
# indent = "    "
# multi_line_output = 3
# include_trailing_comma = true
# force_grid_wrap = 0
# use_parentheses = true

# [tool.black]
# line-length = 88
# target-version = ["py38", "py39", "py310", "py311"]

# [tool.pytest.ini_options]
# minversion = "6.2"
# addopts = "-qq"
# testpaths = [
#     "flwr_baselines",
# ]

# [tool.mypy]
# ignore_missing_imports = true
# strict = false
# plugins = "numpy.typing.mypy_plugin"

# [tool.pylint."MESSAGES CONTROL"]
# disable = "bad-continuation,duplicate-code,too-few-public-methods,useless-import-alias"
# good-names = "i,j,k,_,x,y,X,Y,K,N,X_train,X_test,fc,l1,l2,l3,h,lr,mu"
# max-args = 10
# max-attributes = 15
# max-locals = 36
# max-branches = 20
# max-statements = 55
# signature-mutators = "hydra.main.main"

# [tool.pylint.typecheck]
# generated-members = "numpy.*, torch.*, tensorflow.*"

# [[tool.mypy.overrides]]
# module = [
#     "importlib.metadata.*",
#     "importlib_metadata.*",
# ]
# follow_imports = "skip"
# follow_imports_for_stubs = true
# disallow_untyped_calls = false

# [[tool.mypy.overrides]]
# module = "torch.*"
# follow_imports = "skip"
# follow_imports_for_stubs = true

# [tool.docformatter]
# wrap-summaries = 88
# wrap-descriptions = 88

# [tool.ruff]
# target-version = "py38"
# line-length = 88
# select = ["D", "E", "F", "W", "B", "ISC", "C4"]
# fixable = ["D", "E", "F", "W", "B", "ISC", "C4"]
# ignore = ["B024", "B027"]
# exclude = [
#     ".bzr",
#     ".direnv",
#     ".eggs",
#     ".git",
#     ".hg",
#     ".mypy_cache",
#     ".nox",
#     ".pants.d",
#     ".pytype",
#     ".ruff_cache",
#     ".svn",
#     ".tox",
#     ".venv",
#     "__pypackages__",
#     "_build",
#     "buck-out",
#     "build",
#     "dist",
#     "node_modules",
#     "venv",
#     "proto",
# ]

# [tool.ruff.pydocstyle]
# convention = "numpy"
