[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets[vision]>=0.5.0",
    "tensorflow>=2.12.1",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "imbalanced-learn>=0.12.0",
    "matplotlib>=3.8.2",
    "omegaconf==2.3.0",
]
name = "statavg"
version = "1.0.0"
description = ""
license = "Apache-2.0"

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "isort==5.13.2",
    "black==24.2.0",
    "docformatter==1.7.5",
    "mypy==1.8.0",
    "pylint==3.2.6",
    "flake8==5.0.4",
    "pytest==6.2.4",
    "pytest-watch==4.2.0",
    "ruff==0.1.9",
    "types-requests==2.31.0.20240125",
]

[tool.isort]
profile = "black"
known_first_party = ["flwr"]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "-qq"
testpaths = ["flwr_baselines"]

[tool.mypy]
ignore_missing_imports = true
strict = false
plugins = "numpy.typing.mypy_plugin"

[tool.pylint."MESSAGES CONTROL"]
disable = "duplicate-code,too-few-public-methods,useless-import-alias,no-member"
good-names = "i,j,k,_,x,y,X,Y,K,N"
max-args = 10
max-attributes = 15
max-locals = 36
max-branches = 20
max-statements = 55

[tool.pylint.typecheck]
generated-members = "numpy.*, torch.*, tensorflow.*"

[[tool.mypy.overrides]]
module = ["importlib.metadata.*", "importlib_metadata.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "torch.*"
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.docformatter]
wrap-summaries = 88
wrap-descriptions = 88

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["D", "E", "F", "W", "B", "ISC", "C4"]
fixable = ["D", "E", "F", "W", "B", "ISC", "C4"]
ignore = ["B024", "B027"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "proto",
]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "itsmaddox-j"

[tool.flwr.app.components]
serverapp = "statavg.server_app:app"
clientapp = "statavg.client_app:app"

[tool.flwr.app.config]
strategy_name = 'statavg'
num_server_rounds = 60
local_epochs = 2
val_ratio = 0.2
learning_rate = 0.002
path_to_dataset = "dataset"
results_save_dir = "results"
include_test = false
testset_ratio = 0.1
input_shape = 8
num_classes = 6
batch_size = 512
num_clients = 5              # This is placed here so that the server can access it.

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5

options.backend.client-resources.num-cpus = 2
options.backend.client-resources.num-gpus = 0.0
