# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracefl"
version = "1.0.0"
description = "TraceFL: Interpretability-Driven Debugging in Federated Learning via Neuron Provenance - A Flower Baseline"
license = "Apache-2.0"
# Dependencies for your Flower App
# Keep only essential dependencies:
dependencies = [
    "flwr[simulation]>=1.22.0",
    "flwr-datasets[vision]>=0.5.0", 
    "torch==2.8.0",
    "torchvision==0.23.0",
    # TraceFL Core (no caching)
    "transformers[torch]==4.48.1",
    "medmnist==3.0.2", 
    "datasets==2.19.1",
    "evaluate==0.4.3",
    "numpy==1.26.4",
    "scikit-learn==1.4.2",
    "matplotlib==3.8.3",
    "tqdm==4.66.2",
    "pillow==10.2.0",
    "seaborn==0.13.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "isort==5.13.2",
    "black==24.2.0",
    "docformatter==1.7.5",
    "mypy==1.8.0",
    "pylint==3.3.1",
    "pytest==7.4.4",
    "pytest-watch==4.2.0",
    "ruff==0.4.5",
    "types-requests==2.31.0.20240125",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "-qq"

[tool.mypy]
ignore_missing_imports = true
strict = false
plugins = "numpy.typing.mypy_plugin"

[tool.pylint."MESSAGES CONTROL"]
disable = "duplicate-code,too-few-public-methods,useless-import-alias"
good-names = "i,j,k,_,x,y,X,Y,K,N"
max-args = 10
max-attributes = 15
max-locals = 36
max-branches = 20
max-statements = 55

[tool.pylint.typecheck]
generated-members = "numpy.*, torch.*, tensorflow.*"

[[tool.mypy.overrides]]
module = [
    "importlib.metadata.*",
    "importlib_metadata.*",
]
follow_imports = "skip"
follow_imports_for_stubs = true
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "torch.*"
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.docformatter]
wrap-summaries = 88
wrap-descriptions = 88

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "proto",
]

[tool.ruff.lint]
select = ["D", "E", "F", "W", "B", "ISC", "C4", "UP"]
fixable = ["D", "E", "F", "W", "B", "ISC", "C4", "UP"]
ignore = ["B024", "B027", "D205", "D209"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "ibrahim"

# Point to your ServerApp and ClientApp objects
# Format: "<module>:<object>"
[tool.flwr.app.components]
serverapp = "tracefl.server_app:app"
clientapp = "tracefl.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 3
fraction-train = 0.5
local-epochs = 1
min-train-nodes = 2

# TraceFL-specific configuration
[tool.flwr.app.config.tracefl]
dataset = "cifar10"  # Options: cifar10, cifar100, pathmnist, organamnist, dbpedia_14, yahoo_answers_topics
model = "resnet18"  # Options: cnn, resnet18, resnet34, resnet50, resnet101, resnet152, densenet121, distilbert/distilbert-base-uncased
num-clients = 10
data-distribution = "non_iid_dirichlet"
dirichlet-alpha = 0.5
device = "cpu"
enable-beta = true
client-weights-normalization = true
provenance-rounds = "1,2,3"
max-per-client-data-size = 1000
max-server-data-size = 500
batch-size = 32
noise-multiplier = -1.0
clipping-norm = -1.0
faulty-clients-ids = ""
label2flip = ""
use-deterministic-sampling = true
random-seed = 42
output-dir = "results"

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 2
options.backend.client-resources.num-gpus = 0.0
